--- a/Romanian/main/Calculator.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calculator.apk/res/values-ro/strings.xml
@@ -62,6 +62,21 @@
     <string name="from_unit_short">km/h</string>
     <string name="fund"/>
     <string name="fund_loan"/>
+    <string name="global_search_key_area_convertion">Arie;Convertor arie;Conversie arie</string>
+    <string name="global_search_key_calculation">Calculare;Calculator;Convertor unități de măsură;Convertor;Conversie unități de măsură</string>
+    <string name="global_search_key_date_convertion">Convertor unități de timp;Unități de timp;Conversie timp;Timp</string>
+    <string name="global_search_key_exchange_rate">Convertor valutar;Conversie rate de schimb;Convertor valute;Valute;Rate de schimb</string>
+    <string name="global_search_key_length_convertion">Lungime;Convertor unități de lungime;Conversie lungimi</string>
+    <string name="global_search_key_mortgage">Calculare amortizare;Calculare rambursare credit;Rambursare credit</string>
+    <string name="global_search_key_personal_tax">Taxe venit personal;Venit după taxare;Calculator taxe;Calculare venit personal;Calcul venit;Calculare venit după taxare;taxare venit personal;taxare;taxe</string>
+    <string name="global_search_key_scientific_convertion">Calculator științific;Calculator funcții;Matematică;Algebră</string>
+    <string name="global_search_key_speed_convertion">Conversie unități de viteză;Conversie viteză;Convertor viteză;Conversie viteză de deplasare;Viteză;Deplasare</string>
+    <string name="global_search_key_temperature_convertion">Conversie unități de temperatură;Conversie temperaturi;Convertor temperatură;Fahrenheit;Celsius;Grade zecimale</string>
+    <string name="global_search_key_volume_convertion">Conversie unități de volum;Conversie volume;Convertor volume</string>
+    <string name="global_search_key_weight_convertion">Conversie unități de greutate;Conversie greutate;Convertor greutăți;Kile;Kg;Kilograme;Pound;Pounds;lbs</string>
+    <string name="global_search_key_word_figure">Simboluri financiare</string>
+    <string name="golbal_search_calculator_setting">Calculator;Setări calculator;Setări</string>
+    <string name="golbal_search_path_calculator_setting">Aplicații de sistem/Calculator/Setări</string>
     <string name="home_title_calculator">Calculator</string>
     <string name="income_type"/>
  <string name="item_title_aa_payment">Defalcare factură</string>
