--- a/Romanian/main/YellowPage.apk/res/values-ro/strings.xml
+++ b/Romanian/main/YellowPage.apk/res/values-ro/strings.xml
@@ -268,26 +268,28 @@ Verificați numărul de urmărire."</string>
     <string name="menu_unfollow_yellow_page">Nu mai urmăriți</string>
     <string name="minimum_price">%d RMB/min</string>
     <string name="mishop_web_payment_title">Verificare Magazin Mi</string>
-    <string name="miuishare_account_activate_confirmation">Activați</string>
+    <string name="miuishare_account_activate_confirmation">Este necesară activarea</string>
     <string name="miuishare_account_activate_ok">Activați</string>
     <string name="miuishare_account_login_cancel">Renunțați</string>
     <string name="miuishare_account_login_confirmation">Este necesară autentificarea</string>
     <string name="miuishare_account_login_ok">Autentificați-vă</string>
-    <string name="miuishare_account_need_activate">Partajarea Weibo necesită legarea la contul Mi, care nu este activat în prezent. Activați  contul mai întâi</string>
-    <string name="miuishare_account_need_login">Partajarea Weibo necesită legarea la contul Mi, la care nu sunteți conectat în prezent. Conectați-vă mai întâi la contul Mi</string>
+    <string name="miuishare_account_need_activate">Partajarea Weibo necesită asocierea contului Weibo la contul Mi, care nu este activat în prezent. Vă activați contul?</string>
+    <string name="miuishare_account_need_login">Partajarea Weibo necesită asocierea contului Weibo la contul Mi la care sunteți conectat în prezent. Vă conectați acum pentru a partaja?</string>
     <string name="miuishare_app_name">Partajare MIUI</string>
-    <string name="miuishare_no_network">"Nu s-a putut conecta la rețea"</string>
+    <string name="miuishare_no_network">Nicio rețea de partajat</string>
     <string name="miuishare_publish">Trimiteți</string>
-    <string name="miuishare_share_done">Conținutul partajat a fost trimis cu succes.</string>
+    <string name="miuishare_qzone_title">Qzone</string>
+    <string name="miuishare_share_done">Conținutul partajat a fost trimis.</string>
     <string name="miuishare_share_editor_title">Partajați</string>
     <string name="miuishare_title_more">Mai multe</string>
     <string name="miuishare_title_share">Partajați</string>
-    <string name="miuishare_wechat_timeline_title">Wechat Moments</string>
+    <string name="miuishare_wechat_timeline_title">Wechat Timeline</string>
     <string name="miuishare_weibo_title">Weibo</string>
     <string name="more_coupons">Toate cupoanele</string>
     <string name="more_express_numbers">Mai multe numere express</string>
     <string name="navigation_search_all_cities">Toate orașele</string>
     <string name="navigation_search_automatically_positioned_city">Orașul actual</string>
+    <string name="navigation_search_default_hint">Căutați locații</string>
     <string name="navigation_search_hot_cities">Populare</string>
     <string name="navigation_search_no_city_list">"Nu s-a găsit nimic"</string>
     <string name="navigation_search_positioning">Localizare…</string>
