--- a/Romanian/main/Music.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Music.apk/res/values-ro/strings.xml
@@ -50,6 +50,7 @@
     <string name="artist">Artişti</string>
     <string name="artist_album">Albume</string>
     <string name="artist_favor">Recomandate</string>
+  <string name="artist_home_search_hint">Căutați artiști</string>
     <string name="artist_is_empty">Numele artistului nu poate fi necompletat.</string>
     <string name="artist_name">Artist</string>
     <string name="artist_news">Noutăți</string>
@@ -98,6 +99,7 @@
     <string name="can_not_find_resource">Nu se pot găsi resurse</string>
     <string name="cancel">Anulaţi</string>
     <string name="cancel_running_download">Renunță</string>
+  <string name="change_download_quality">Modificați calitatea descărcărilor</string>
     <string name="channel_list_fragment_title">Radio</string>
     <string name="chinese_female">Artiste (China)</string>
     <string name="chinese_group">Trupe (China)</string>
@@ -202,6 +204,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="doc_filter">Documente</string>
     <string name="done">Terminat</string>
     <string name="download">Descărcaţi</string>
+  <string name="download_added_to_list">Adăugată în lista de descărcare</string>
     <string name="download_all_song">Descărcaţi tot</string>
     <string name="download_apk_desktop_installing">Se instalează</string>
     <string name="download_apk_desktop_pause">Oprită</string>
@@ -257,10 +260,20 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="download_success">Finalizată</string>
     <string name="download_title_sorted_by_date">Descărcări - Sortate după dată</string>
     <string name="download_title_sorted_by_size">Descărcări - Sortate după dimensiune</string>
+  <string name="download_toast">Utilizare date mobile pentru descărcarea melodiilor</string>
+  <string name="download_toast_with_beyond_data">Utilizare date mobile pentru descărcarea melodiilor. Limita a fost depășită cu %s</string>
+  <string name="download_toast_with_data">Utilizare date mobile pentru descărcarea melodiilor, %s rămas</string>
     <string name="download_traffic_dialog_buy_package">Achiziționați un plan de date pentru muzică</string>
-    <string name="download_traffic_dialog_msg">Utilizarea datelor mobile pentru descărcarea melodiilor poate genera costuri suplimentare</string>
+  <string name="download_traffic_dialog_msg">Mai aveți %s din limita de date mobile rămas. Utilizați conexiunea de date mobile pentru a descărca melodii?</string>
+  <string name="download_traffic_dialog_msg_beyond">"Ați depășit deja limita traficului de date cu %s. Utilizați conexiunea de date mobile pentru a descărca melodii?"</string>
+  <string name="download_traffic_dialog_msg_serious">Mai aveți doar %s rămas din limita de date mobile. Utilizați conexiunea de date mobile pentru a descărca melodii?</string>
+  <string name="download_traffic_dialog_msg_without_data">"Utilizați datele mobile pentru a descărca melodii. Descărcați oricum?"</string>
     <string name="download_traffic_dialog_negative_button">Așteptați conectarea la Wi-Fi</string>
-    <string name="download_traffic_dialog_position_button">Descărcați totuși</string>
+  <string name="download_traffic_dialog_position_button">Descărcați</string>
+  <string name="download_traffic_dialog_position_button_serious">Descarc oricum</string>
+  <string name="download_traffic_dialog_title">Avertisment utilizare date mobile</string>
+  <string name="download_traffic_dialog_title_beyond">Limita de date a fost depășită</string>
+  <string name="download_traffic_dialog_title_serious">Date mobile aproape utilizate</string>
     <string name="download_unknown_title">&lt;Nedenumit&gt;</string>
     <string name="download_wait_connect">Așteaptă conectarea la Wi-Fi</string>
     <string name="download_when_network_connected">Descarcă când sunteți conectat la internet</string>
@@ -326,8 +339,8 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="file_not_found">Fişierul nu există</string>
     <string name="filter_by_duration">Filtrare după durată</string>
     <string name="filter_by_duration_format">%2$d min. %5$2d sec.</string>
-    <string name="filter_by_duration_max">5 min.</string>
-    <string name="filter_by_duration_min">0 sec.</string>
+    <string name="filter_by_duration_max">%d min.</string>
+    <string name="filter_by_duration_min">%d sec.</string>
     <string name="filter_by_duration_prefix">"Se ascund fişierele mai scurte de "</string>
     <string name="filter_by_duration_summary">Se ascund fişierele audio scurte</string>
     <string name="filter_by_folder">Filtrare după dosar</string>
@@ -454,6 +467,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="metered_alert_msg">"Utilizați datele mobile pentru a reda melodii. Continuați oricum?"</string>
     <string name="metered_alert_msg_with_data">Mai aveți %s din traficul de date mobile rămas. Utilizați datele mobile pentru a reda melodii?</string>
     <string name="metered_allow">Redați</string>
+  <string name="metered_beyond_alert">Limita de date depășită</string>
     <string name="metered_disallow">Nu acum</string>
     <string name="metered_play_toast">Utilizare conexiune de date mobile pentru a reda melodiile</string>
     <string name="metered_play_toast_with_beyond_data">Se utilizează datele mobile pentru a reda melodii. S-a depășit limita cu %s</string>
@@ -682,6 +696,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="search_for_album">Album</string>
     <string name="search_for_artist">Artist</string>
     <string name="search_hint">Căutați artiști, melodii, albume și recomandări</string>
+  <string name="search_hint_not_support_online">Căutați artiști, melodii și albume</string>
     <string name="search_history_clear_all">Goliți</string>
     <string name="search_instant_online_music">Online</string>
     <string name="search_lyric">Căutare versuri</string>
@@ -812,6 +827,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="title_online_artist">Artiști de Top</string>
     <string name="title_online_billboard">Topuri muzicale</string>
     <string name="title_online_fm">Radio</string>
+  <string name="title_online_fm_recommend">Posturi FM recomandate</string>
     <string name="title_online_recommend">Liste de redare recomandate</string>
     <string name="title_online_release">Nou</string>
     <string name="title_online_song">Melodii populare</string>
